IE CSS fixes for search box and button in site finder (no longer overlap)
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10157 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/site-finder/site-finder.css
+++ b/root/projects/slingshot/source/web/components/site-finder/site-finder.css
@@ -19,22 +19,11 @@
    background-color: #aebccc;
 }
 
-.site-finder .search-term
+.site-finder .search-controls .search-term
 {
-   padding: 0px;
-   float: left;
+   vertical-align: text-bottom;
+   height: 18px;
    width: 75%;
-}
-
-.site-finder .search-controls .search-term input
-{
-   width: 98%;
-   margin: 3px 4px 0px 4px;
-}
-
-.site-finder .search-button
-{
-   padding: 0px;
 }
 
 .site-finder .yui-dt-bd
